--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
     </form>
     <h4 class="js-greetings greeting"></h4>
 
+    <form action="" class="js-toDoForm">
+        <input type="text" placeholder="Write someting to do...">
+    </form>
+    <ul class="js-toDoList">
+        
+    </ul>
+    
     <script src = "clock.js"></script>
     <script src = "greeting.js"></script>
+    <script src = "todo.js"></script>
 </body>
 </html>
