--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h4 class="js-greetings greeting"></h4>
 
     <form action="" class="js-toDoForm">
-        <input type="text" placeholder="Write someting to do...">
+        <input type="text" placeholder="Write to do list...">
     </form>
     <ul class="js-toDoList">
         
